# audio-utils

./: .gitignore  .npmignore  .prettierignore  CMakeLists.txt  README.md  package.json
.github/workflows/: release.yml
scripts/: build.ts  example.ts
src/: index.ts
src/lib/: bindings.ts
src/native/: main.cpp
src/types/: types.ts
